k8s/rethinkdb/rethinkdb-services.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    db: rethinkdb
  name: rethinkdb-admin
spec:
  ports:
   - port: 8080
     targetPort: admin
  selector:
    app: rethinkdb
---
apiVersion: v1
kind: Service
metadata:
  labels:
    db: rethinkdb
  name: rethinkdb
spec:
  ports:
    - port: 29015
      targetPort: cluster
  selector:
    app: rethinkdb
---
apiVersion: v1
kind: Service
metadata:
  labels:
    db: rethinkdb
  name: rethinkdb-proxy
spec:
  ports:
    - port: 28015
      targetPort: driver
  selector:
    app: rethinkdb
---
